# rat

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  developing.md  main.cpp  readme.md
src/core/: readme.md
src/core/initializer/: readme.md
src/core/initializer/config_readers/: config_reader.h
src/core/initializer/config_readers/file_readers/: config_file_reader.cpp  config_file_reader.h
src/core/initializer/models/: startup_context.h
src/core/initializer/startup_pipeline/: startup_pipe.h  startup_pipe_handler.h
src/core/initializer/startup_pipeline/builder/: startup_pipeline_builder.h
src/core/initializer/validators/: validator.h
src/core/worker/: readme.md  worker.cpp  worker.h
src/data-access/collectors/: readme.md
src/data_access/: readme.md
src/data_access/collectors/: base_collector.cpp  base_collector.h  collector.cpp  collector.h  i_collector.cpp  i_collector.h
src/data_access/collectors/example_collector/: example_collector.cpp  example_collector.h  example_data.h
src/data_access/collectors/unix/: system_executor.cpp  system_executor.h
src/data_access/collectors/unix/df_collector/: df_collector.cpp  df_collector.h  df_data.h
src/data_access/senders/: i_sender.h  readme.md  sender.h
src/data_access/senders/example_sender/: example_sender.cpp  example_sender.h
src/models/: base_dto.h  dto.h  readme.md  result.h  result_status.h
src/nlohmann/: CMakeLists.txt
